# Blackboard

./: .gitignore  CMakeLists.txt  README.md
include/Blackboard/: Blackboard.h  BlackboardRegistry.h  Object.h  Utilities.h  Value.h
src/: Blackboard.cpp  BlackboardRegistry.cpp  CMakeLists.txt  Object.cpp  Value.cpp
test/: BlackboardRegistryTest.cpp  BlackboardTest.cpp  CMakeLists.txt  IntegrationTest.cpp  ObjectTest.cpp  ValueTest.cpp
test/lib/: Catch.cpp
